assets/css/main.css
* {
    padding: 0;
    margin: 0 auto;
}

body,
html {
    font-family: 'Roboto', sans-serif;
    line-height: 1.8em;
}

a {
    color: #999;
    text-decoration: none;
    font-family: 'Roboto Slab', serif;
}

a:hover {
    color: #ccc;
    text-decoration: none;
}

img {
    max-width: 100%;
    height: auto;
}

h1,
h2,
h3,
h4,
h5,
h6,
p.date.articledate {
    font-family: 'Roboto Slab', serif;
    color: #404040;
}

p {
    font-family: 'Roboto', sans-serif;
    margin: 0 auto;
    padding-bottom: 25px !important;
}

.center {
    text-align: center !important;
}

.blog-content {
    position: absolute;
    top: 0;
    right: 0;
    margin: 80px 0;
    width: 75%
}

.post-content {
    padding: 20px 130px;
    font-size: 1.3em;
}

.title {
    color: #a1a1a1;
    padding: 3px 0 20px 0;
    border-bottom: 1px solid #e7e7e7;
    text-align: center;
    font-family: 'Roboto Slab', serif;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none
}

.blog .title {
    padding: 20px 130px;
    border-bottom: 0;
}

.post-meta {
    padding: 0 130px;
}

#posts {
    list-style: none;
}

.post ul {
	padding-left: 40px;
  list-style: none;
}


.post li:before {
  color: #b0120a;
  content: '\2022';
  display: block;
  font-size: 25px !important;
  left: -20px;
  max-height: 0px;
  max-width: 0px;
  position: relative;
  top: -5px;
}

#master {
    position: fixed !important;
    top: 0;
    left: 0;
    width: 25% !important;
    height: 100%;
    background-color: #b0120a;
    padding-top: 70px;
    box-shadow: inset -30px -10px 80px 0 rgba(0, 0, 0, .2), inset -10px -10px 20px 0 rgba(0, 0, 0, .15), 1px 0 0 0 white;
}

#small-nav {
    display: none;
}

#logo {
    background: url(../img/rafael.png) center no-repeat;
    background-size: 120px 120px;
}

#logo>h2 {
  color: #fff;
}

#master ul {
    padding: 10px 35px;
    /*text-align: center;*/
    display: block;
    list-style: none;
}

#master ul li {
    padding: 8px 0;
    font-size: 20px;
    color: #fff !important;
}

#master a {
    color: #fff;
}

#master a:hover {
    -webkit-transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    -o-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
    color: #f69988;
}

#master i.fa {
  margin-right: 35px;
}

.line {
    width: 100%;
    height: 59px;
    margin: 25px auto;
    padding: 35px;
    background: url(../img/line-rfl-gray.png) no-repeat center;
}

blockquote {
    background: #f9f9f9;
    border-left: 7px solid #b0120a;
    margin: 1.5em 10px;
    padding: 0.5em 10px;
    quotes: "\201C""\201D""\2018""\2019";
}

blockquote:before {
    color: #999;
    content: open-quote;
    font-size: 2.3em;
    margin-right: 0.25em;
    vertical-align: -0.2em;
}

blockquote p {
    display: inline;
    font-family: "Roboto Slab", serif;
    text-align: center;
    font-style: italic;
}

.post-content {
  line-height: 1.8em;
}

.post-content img {
    padding: 8px;
    border: 1px solid #DBDBDB !important;
    background: #E9E9E9;
    border-radius: 2px;
    width: 100%;
    float: left;
    margin-bottom: 15px;
}

.post-content img:after {
    width: 100%;
    text-align: center !important;
}

.post-content h2 {
  padding-bottom: 25px;
}

.navbar {
    min-height: 65px;
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: #fff;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
    background-color: #b0120a;
}

.navbar-default .navbar-toggle {
    border-color: transparent;
}

.navbar-default {
    background-color: #b0120a;
    border-color: #b0120a;
}

.navbar-toggle {
    float: left;
    margin: 12px 0 12px 15px;
}

.navbar-default .navbar-nav > li > a {
    color: #fff;
    font-size: 1.2em;
}

.navbar-default .navbar-collapse,
.navbar-default .navbar-form {
    border-color: transparent;
}

.social-links {
    min-width: 50px;
    max-width: 300px;
    height: 34px;
    list-style: none;
    display: block;
}

.social-links li {
    float: left;
    margin: 0 8px;
    display: inline-block;
}

.social-links li:nth-child(even):hover {
    -webkit-transform: rotate(-5deg);
    -moz-transform: rotate(-5deg);
    -o-transform: rotate(-5deg);
    transform: rotate(-5deg);
}

.social-links li:nth-child(odd):hover {
    -webkit-transform: rotate(5deg);
    -moz-transform: rotate(5deg);
    -o-transform: rotate(5deg);
    transform: rotate(5deg);
}

.social-links li a {
    display: block;
    outline: none;
    margin: 0 4px;
    text-indent: -9000px;
    position: relative;
    border: none;
    overflow: hidden;
}

#social-twitter {
    background: transparent url(../img/social-twitter.png) no-repeat;
}

#social-facebook {
    background: transparent url(../img/social-facebook.png) no-repeat;
}

#social-gplus {
    background: transparent url(../img/social-google.png) no-repeat;
}

#social-instagram {
    background: transparent url(../img/social-instagram.png) no-repeat;
}

#social-git {
    background: transparent url(../img/social-github.png) no-repeat;
}

.social-links li,
#social-twitter,
#social-facebook,
#social-gplus,
#social-instagram,
#social-git {
    width: 34px;
    height: 34px;
}

/* Github Box */

.github-box {
  font-family: "Helvetica Neue", Arial, sans-serif;
  background: #fafafa;
  border: 1px solid #ddd;
  color: #666;
  border-radius: 5px;
  float: left;
  margin-right: 1.2em;
  margin-bottom: 2em;
  width: 46%;
  line-height: 1em;
}

.github-box a {
  color: #4183C4;
  border: none;
}

/* Github Box Header */

.github-box .github-box-header {
  position: relative;
  border-bottom: 1px solid #ddd;
  border-radius: 5px 5px 0 0;
  background: #fcfcfc;
  background: -moz-linear-gradient(#fcfcfc, #ebebeb);
  background: -webkit-linear-gradient(#fcfcfc, #ebebeb);
  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#fcfcfc',endColorstr='#ebebeb')";
}

.github-box .github-box-header h3 {
  font-family: Helvetica, Arial, sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: gray;
  margin: 0;
  padding: 10px 10px 10px 10px;
}

.github-box .github-box-header h3 a {
  font-weight: bold
}

/* Github Box Header - Stats */

.github-box .github-box-header .github-stats {
  position: absolute;
  top: 10px;
  right: 10px;
  background: white;
  border: 1px solid #ddd;
  border-radius: 3px;
  font-size: 11px;
  font-weight: bold;
  line-height: 21px;
  height: 21px;
}

.github-box .github-box-header .github-stats a {
  display: inline-block;
  height: 21px;
  color: #666;
  padding: 0 5px 0 18px;
  background: url('../img/btn-sprite.png') no-repeat;
  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
  opacity: 0.7;
}

.github-box .github-box-header .github-stats a:hover {
  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
  opacity: 1;
}

.github-box .github-box-header .github-stats .repo-watchers {
  border-right: 1px solid #ddd;
  background-position: 3px 4px;
}

.github-box .github-box-header .github-stats .repo-forks {
  background-position: 2px -14px;
  padding-left: 15px;
}

/* Github Box Content */

.github-box .github-box-content {
  padding: 10px;
  font-weight: 300;
  font-size: 0.7em;
}

.github-box .github-box-content p {
  margin: 0;
}

.github-box .github-box-content .repo-link {
  font-weight: bold;
}

/* Github Box Download */

.github-box .github-box-download {
  position: relative;
  border-top: 1px solid #ddd;
  background: white;
  border-radius: 0 0 3px 3px;
  padding: 10px;
  height: 40px;
}

.github-box .github-box-download .repo-update {
  margin: 0;
  font-size: 11px;
  color: #666;
  line-height: 24px;
}

.github-box .github-box-download .repo-update strong {
  font-size: 12px;
  font-weight: bold;
  color: #000;
}

.github-box .github-box-download .repo-download {
  position: absolute;
  display: block;
  top: 10px;
  right: 10px;
  height: 24px;
  line-height: 24px;
  font-size: 12px;
  color: #666;
  font-weight: bold;
  text-shadow: 0 1px 0 rgba(255,255,255,0.9);
  padding: 0 10px;
  border: 1px solid #ddd;
  border-bottom-color: #bbb;
  border-radius: 3px;
  display: block;
  text-indent: -9999px;
  width: 24px;
  padding: 0;
  background: url('../img/btn-sprite.png') no-repeat 4px -31px,-webkit-linear-gradient(whiteSmoke, #E5E5E5);
  background: url('../img/btn-sprite.png') no-repeat 4px -31px,-moz-linear-gradient(#f1f7fa, #dbeaf1);
  filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
  opacity: 0.7;
}

.github-box .github-box-download .repo-download:hover {
  color: #527894;
  border-color: #cfe3ed;
  border-bottom-color: #9fc7db;
  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
  opacity: 1;
}

